# ohif-project

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  upload_dicom_files.sh
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/apps/annotations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/annotations/migrations/: 0001_initial.py  0002_initial.py
backend/apps/studies/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/studies/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: celery.py  exceptions.py  urls.py
backend/config/settings/: base.py  local.py  production.py
frontend/: .dockerignore  index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: copy-cornerstone-workers.mjs
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: annotations.js  auth.js  client.js  studies.js
frontend/src/components/StudyList/: StudyList.jsx  StudyList.module.css
frontend/src/components/Toolbar/: Toolbar.jsx  Toolbar.module.css
frontend/src/hooks/: registerVolumeLoader.js  useCornerstoneInit.js  useImageIds.js  useViewportSeries.js  useVolumeLoader.js
frontend/src/pages/: LoginPage.jsx  LoginPage.module.css  StudyListPage.jsx  ViewerPage.jsx  ViewerPage.module.css
frontend/src/store/: authStore.js  viewerStore.js
nginx/: nginx.conf
orthanc/: orthanc.json
(+8 files in other folders)
